--- a/templates/community.html
+++ b/templates/community.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/bubbles.jpeg') }}')">
+    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/community.jpg') }}')">
       <div class="overlay"></div>
       <div class="container-image-fluid">
         <link href="{{ url_for('static', filename='css/for_community.css') }}" rel="stylesheet">
@@ -16,10 +16,9 @@
         <br>
             <div class="site-heading">
               <h1>The IN_dividuals Family</h1>
-              <div class="subheading">Join the WORld</div>
+              <div class="subheading">join the world</div>
               </div>
-              <hr>
-              <hr>
+             
               <br>
               <br>
               <br>
