--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,14 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="{{ url_for('static', filename='css/new_account.css') }}" rel="stylesheet">
+  <link href="{{url_for('static', filename='css/new_account.css')}}" rel="stylesheet">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 
 
 
-  <header class="masthead" id="photu"style="background-image: url('{{ url_for('static', filename='img/into.webp') }}')" >
+  <header class="masthead" id="photu"style="background-image: url('{{ url_for('static', filename='img/into.jpg') }}')" >
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
