--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,7 +45,7 @@
           <div class="content">
           <div class="logo"><a href="#">Vriddhi</a></div>
             <ul class="links">
-              <li></li><img class="vriddhi_logo" src="{{url_for('static', filename='img/vriddhi_logo.png')}}" alt="" width="110" height="110"></li>
+              <li></li><img class="vriddhi_logo" src="{{url_for('static', filename='img/logo.jpg')}}" alt="" width="110" height="110"></li>
               <li><a href="/home">Home</a></li>
               <li><a href="/about_me">Purpose</a></li>
               <li>
