--- a/templates/layout_intro.html
+++ b/templates/layout_intro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.7, shrink-to-fit=no,maximum-scale=0.7">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>{{params['blog_name']}}</title>
+    <title>Vriddhi</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -25,7 +25,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="/">{{params['blog_name']}}</a>
+        <a class="navbar-brand" href="/">Vriddh!</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
