--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
    
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.75, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=0.5, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Beginning</title>
@@ -22,7 +22,7 @@
 
 
 
-  <header class="masthead" id="photu"style="background-image: url('{{ url_for('static', filename='img/into.jpg') }}')" >
+  <header class="masthead" id="photu"style="background-image: url('{{ url_for('static', filename='img/into.webp') }}')" >
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
