--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
 
 
-  <header class="masthead" id="photu"style="background-image: url('{{ url_for('static', filename='img/into.webp') }}')" >
+  <header class="masthead" id="photu"style="background-image: url('{{ url_for('static', filename='img/into.jpg') }}')" >
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
