--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.5, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Beginning</title>
+  <title>Vriddhi</title>
 
   <!-- Bootstrap core CSS -->
  
