--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -26,28 +26,28 @@
     text-align:center;
     font-size:16px;
     font-weight: 600;
-    color:#c1d370;
+    color:#32d1c4;
     opacity:2;
     text-decoration:none;
   }
   span{
     font-size: 20px;
-    text-decoration: underline;
-    color:royalblue
+    text-decoration: none;
+    color:rgb(255, 255, 255)
   }
   .forgot:hover {
     display:block;
     text-align:center;
     font-size:16px;
     font-weight: 600;
-    color:#c1d370;
+    color:#32d1c4;
     opacity:2;
     text-decoration:none;
   }
   
 html, body {
     height: 100%;
-    background: linear-gradient(#bdc3c7,#2c3e50);
+    background: linear-gradient(240deg, #544a7d,#ffd452);
     overflow: hidden;
 }
 .page-heading{
@@ -210,13 +210,7 @@ h3 {
     margin-bottom: 8px !important;
 }
 
-.invalid-feedback{
-    color: #ff606e;
-}
 
-.valid-feedback{
-   color: #2acc80;
-}
 @media (min-width:880px) {
  
     #alert{
@@ -226,7 +220,7 @@ h3 {
         opacity: 8;
         color:whitesmoke}
     .form-holder {
-        margin-left: 40%;
+        margin-left: 42%;
         
         width: 80%;
           
@@ -276,12 +270,7 @@ h3 {
 
 }
 @media (max-width:880px) {
-    #alert{
-        background-color: #020202;
-        font-size: 21px;
-        font-weight: 700;
-        opacity: 8;
-        color:whitesmoke}
+    
     .form-holder {
         margin-left: 35%;
        
@@ -299,12 +288,7 @@ h3 {
         display: inline-block;
         width: 90%;
         background: black;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        border-radius: 10px;
-        text-align: left;
-        -webkit-transition: all 0.4s ease;
-        transition: all 0.4s ease;
+       
     }.form-content input[type=text], .form-content input[type=password], .form-content input[type=email], .form-content select {
         max-height: 100px;
         height: 40%;
@@ -320,8 +304,7 @@ h3 {
         font-size: 20px;
         font-weight: 700;
         color: whitesmoke;
-        -webkit-transition: all 0.3s ease;
-        transition: all 0.3s ease;
+    
         margin-top: 4%;
     }
     
@@ -338,12 +321,7 @@ h3 {
             text-align: center;
             min-height: 100vh;
     }
-    #alert{
-        background-color: #020202;
-        font-size: 21px;
-        font-weight: 700;
-        opacity: 8;
-        color:whitesmoke}
+  
     .form-content .form-items {
        
         padding-right: -20px;
@@ -351,12 +329,7 @@ h3 {
         display: inline-block;
         max-width: 400px;
       min-width: 380px;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        border-radius: 10px;
-        text-align: left;
-        -webkit-transition: all 0.4s ease;
-        transition: all 0.4s ease;
+      
     }.form-content input[type=text], .form-content input[type=password], .form-content input[type=email], .form-content select {
         max-height: 100px;
         height: 40%;
@@ -389,12 +362,7 @@ h3 {
             text-align: center;
             min-height: 100vh;
     }
-    #alert{
-        background-color: #020202;
-        font-size: 21px;
-        font-weight: 700;
-        opacity: 8;
-        color:whitesmoke}
+    
     .form-content .form-items {
        
         padding-right: 18px;
@@ -403,12 +371,7 @@ h3 {
         width: 10%;
       max-width: 400px;
       min-width: 300px;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        border-radius: 10px;
-        text-align: left;
-        -webkit-transition: all 0.4s ease;
-        transition: all 0.4s ease;
+       
     }.form-content input[type=text], .form-content input[type=password], .form-content input[type=email], .form-content select {
         max-height: 100px;
         height: 40%;
