--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="{{url_for('static', filename='css/new_account.css')}}" rel="stylesheet">
+  <link href="{{url_for('static', filename='css/for_intro.css')}}" rel="stylesheet">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
