--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
    
       <div class="video-container">
           <video autoplay muted loop>
-              <source src="{{ url_for('static', filename='img/vriddhi_vedio.mp4') }}" type="video/mp4">
+              <source src="{{ url_for('static', filename='img/') }}" type="video/mp4">
              
           </video>
       </div>
