--- a/static/css/for_home.css
+++ b/static/css/for_home.css
@@ -1,25 +1,3 @@
-/*deleting google stylesheet*/
-/* for search results*/
-.searched{
-  color:saddlebrown;
-  font-size: 50px;
-}
-h3{
-  margin-top: 40px;
-  font-size: 42px;
-  font-weight: 600;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin-left: 8%;
-
-}
-h4{
-  font-size: 40px;
-  font-weight: 400;
-  font-family: cursive;
-  font-style: italic;
-  margin-left: 500px;
- 
-}
 /*for vedio*/
 body, header {
   margin: 0;
@@ -52,6 +30,39 @@ width:100%;
   height: 100%;
 }
 
+
+
+
+
+/* for search results*/
+.searched{
+  color:saddlebrown;
+  font-size: 50px;
+}
+h3{
+  margin-top: 40px;
+  font-size: 42px;
+  font-weight: 600;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-left: 8%;
+
+}
+h4{
+  font-size: 40px;
+  font-weight: 400;
+  font-family: cursive;
+  font-style: italic;
+  margin-left: 500px;
+ 
+}
+#vedio{
+  
+  width: 100%;
+  height:80px;
+  z-index: -10;
+  
+ 
+}
 header.masthead
 {background:no-repeat center center;background-color:#64696d
     ;margin-top:0px;height:35rem;padding-top:20px;width:100%;backface-visibility: visible;background-size: cover;}
@@ -60,15 +71,15 @@ header.masthead
     {padding:25px 0 150px;color:#3c4757}
     header.masthead .page-heading .subheading,header.masthead .site-heading .subheading
     {
-        font-size:35px;color: #fbf8f8;font-weight:620;line-height:1.1;display:block;
+        font-size:35px;color: #ffffff;font-weight:620;line-height:1.1;display:block;
         margin:19px 0 0;font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     }
 
 h1{
     font-size: 90px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    
-    color: #f0e9e9;
+    margin-top: 40px;
+    color: #ffffff;
 }
 
 header.masthead .site-heading
@@ -189,19 +200,19 @@ margin-bottom: 20px;
 
    .post-title-1{
     font-size: 30px;
-    text-decoration:#1287AB;;
+    text-decoration:#5BA9BE underline;
     margin-left: 2%;
     margin-bottom: 12px;
-    color:#1287AB;
+    color:#5EA9BE
     
     
    }
    .post-title-2{
     font-size: 30px;
-    text-decoration:#e79d09 underline;
+    text-decoration:#F3BFB3 underline;
     margin-left: 2%;
     margin-bottom: 12px;
-    color:#e78e09
+    color:#F3BFB3
    }
    .post-meta-1{
     margin-left: 5%;
@@ -298,59 +309,6 @@ margin-bottom: 20px;
 
               
           
-/*water
-
-img {
-  max-width: 100%;
-  width: 100%;
-  vertical-align: bottom;
-}
-
-h1, h2, p {
-  margin: 0;
-}
-
-/*===================
-animation01
-====================
-
-.animation01 {
-  display: flex;
-  
-  align-items: center;
-  position: absolute;
-  width: 400px;
-  height: 1000px;
-}
-
-.animation01 div {
-  width: 20%;
-height: 100%;
-  animation: animation01 0.8s infinite;
-  transform-origin: top;
-  opacity: 0;
-}
-
-.animation01 div:nth-child(1) {
-  background-color: #d55959;
-
-}
-.animation02 div:nth-child(2) {
-  background-color: #d55959;
-}
-
-
-
-@keyframes animation01 {
-  0% {
-      transform: scale3d(1, 0, 10);
-      opacity: 1;
-  }
-  100% {
-      transform: scale3d(1, 3, 1);
-      opacity: 1;
-  }
-}*/
 
  /* for individual posts*/
 .container-content{
@@ -481,7 +439,9 @@ letter-spacing: 1px;
  
 }
 @media(min-width:870px){
- 
+ #logo-1{
+  display: inline;
+ }
   .searched{
     font-size: 80px;
   }
@@ -494,7 +454,7 @@ letter-spacing: 1px;
  #user-info-1{
   
  display: inline;
-     margin-right: -16%;
+     margin-right:-12%;
      height: 200px;
      width: 310px;
     right: 0;
@@ -575,6 +535,9 @@ width: 69%;
 }
 span{
   display:none
+}
+.searched{
+  display: inline;
 }
 }
 @media(min-width:1200px){
