--- a/static/css/for_all_web.css
+++ b/static/css/for_all_web.css
@@ -107,154 +107,7 @@ input, select {
 
 
 
-.container-waterflow-2{
-         
-    position:fixed;
-    z-index: 1;
-    background-color: rgba(142, 156, 151, 0.306);
-  height: 100%;
-     width:90px;
-     margin-left: 2189px;
 
-   }
-   */:root{--blue:#007bff;--indigo:#6610f2;--purple:#6f42c1;--pink:#e83e8c;--red:#dc3545;--orange:#fd7e14;--yellow:#ffc107;--green:#28a745;--teal:#20c997;--cyan:#17a2b8;--white:#fff;--gray:#717d6c;--gray-dark:#343a40;--primary:#007bff;--secondary:#6c757d;--success:#a7aca8;--info:#17a2b8;--warning:#ffc107;--danger:#dc3545;--light:#79c0e4;--dark:#343a40;--breakpoint-xs:0;--breakpoint-sm:576px;--breakpoint-md:900px;--breakpoint-lg:992px;--breakpoint-xl:1200px;--font-family-sans-serif:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";--font-family-monospace:SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}*
-
-
-
-
-
-.container-anime{
-
-margin-left: 20px;
-margin-top: 90px;
-}
-.flex {
-display: flex;
-justify-content: center;
-align-items: center;
-width: 80px;
-height: 80px;
-
-margin-left: 165px;
-}
-
-/* cube */
-.cube {
-position: relative;
-width: 1px;
-height: 1px;
-margin: 0 80px 0 0;
-transform-style: preserve-3d;
-}
-.wall {
-width: 80px;
-height: 80px;
-position: absolute;
-left: calc(-80px / 2);
-top: calc(-80px / 2);
-text-align: center;
-line-height: 100px;
-border: solid 1px #0d0d0d;
-}
-.front {
-transform: translateZ(calc(80px / 2));
-}
-.back {
-transform: translateZ(calc(-80px / 2)) rotateY(180deg);
-}
-.right {
-transform: translateX(calc(80px / 2)) rotateY(90deg);
-}
-.left {
-transform: translateX(calc(-80px / 2)) rotateY(-90deg);
-}
-.top {
-transform: translateY(calc(-80px / 2)) rotateX(90deg);
-}
-.bottom {
-transform: translateY(calc(80px / 2)) rotateX(-90deg);
-}
-
-/* animation */
-
-
-.flex:nth-of-type(4) .cube:nth-of-type(1) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s infinite;
-}
-
-
-.flex:nth-of-type(3) .cube:nth-of-type(1) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.6s infinite;
-}
-.flex:nth-of-type(4) .cube:nth-of-type(2) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.6s infinite;
-}
-
-
-.flex:nth-of-type(2) .cube:nth-of-type(1) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.7s infinite;
-}
-.flex:nth-of-type(3) .cube:nth-of-type(2) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.7s infinite;
-}
-.flex:nth-of-type(4) .cube:nth-of-type(3) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.8s infinite;
-}
-
-
-.flex:nth-of-type(1) .cube:nth-of-type(1) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.8s infinite;
-}
-.flex:nth-of-type(2) .cube:nth-of-type(2) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.8s infinite;
-}
-.flex:nth-of-type(3) .cube:nth-of-type(3) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.8s infinite;
-}
-.flex:nth-of-type(4) .cube:nth-of-type(4) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.8s infinite;
-}
-
-
-.flex:nth-of-type(1) .cube:nth-of-type(2) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.9s infinite;
-}
-.flex:nth-of-type(2) .cube:nth-of-type(3) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.9s infinite;
-}
-.flex:nth-of-type(3) .cube:nth-of-type(4) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.9s infinite;
-}
-
-
-.flex:nth-of-type(1) .cube:nth-of-type(3) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 1s infinite;
-}
-.flex:nth-of-type(2) .cube:nth-of-type(4) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 1s infinite;
-}
-
-
-.flex:nth-of-type(1) .cube:nth-of-type(4) {
-animation: rotation 3s cubic-bezier(0.215, 0.61, 0.355, 1) 1.1s infinite;
-}
-
-@keyframes rotation {
-100% {
-transform: rotateX(270deg) rotateY(270deg);
-}
-}
-
-.wall{
-
-animation: infinite;
-}
-
-@keyframes color {
-100% {
-background-color: #fff;
-}
-}
 
 
 
@@ -278,7 +131,7 @@ background-color: #fff;
     
 
 .copyright {
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 700;
     margin-left: 25%;
     margin-top: 2%;
@@ -295,13 +148,13 @@ top:0;
 
 
 /*nav try*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .wrapper{
   background: linear-gradient(109.6deg, rgb(46, 49, 49) 11.2%, rgba(110,123,251,1) 91.1%);
@@ -372,6 +225,7 @@ nav .content .links{
 }
 .wrapper #show-search:checked ~ .search-icon i::before{
   content: "\f00";
+line-height: 30px;
 }
 
 #icon-s{
@@ -381,7 +235,7 @@ nav .content .links{
 }
 .wrapper .search-box{
   position: absolute;
-  height: 100%;
+  height: 98%;
   max-width: calc(100% - 50px);
   width: 90%;
   
@@ -468,8 +322,8 @@ nav .content .links{
 
 
   margin-right: 35%;
- 
-  text-decoration: underline;
+ background: red;
+  text-decoration: none;
 }
 .vriddhi_logo{
   display: none;}
@@ -505,8 +359,12 @@ nav .content .links{
   .vriddhi_logo{
     display: inline;
     background-color: #080808;
-    width: 60%;
-    height: 19%;
+    width: 48%;
+    height: 15%;
+    margin-left: 10%;
+  }
+  .copyright{
+    font-size: 28px;
   }
   .wrapper .menu-icon{
     display: block;
@@ -587,8 +445,16 @@ nav .content .links{
     font-size: 24px;
     margin-left: 2%;
   }
+  .vriddhi_logo{
+    display: inline;
+    background-color: #080808;
+    width: 46%;
+    height: 15%;
+    margin-left: 10%;
+  }
 }
 @media screen and (max-width: 400px){
+
   .wrapper nav{
     padding: 0 10px;
   }
