--- a/static/css/for_home.css
+++ b/static/css/for_home.css
@@ -17,7 +17,7 @@ header {
 .video-container {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: clamp(300px,25vw,500px);
 
 }
 
@@ -28,6 +28,8 @@ video {
   left: 0;
 width:100%;
   height: 100%;
+  z-index: 5;
+
 }
 
 
@@ -55,14 +57,7 @@ h4{
   margin-left: 500px;
  
 }
-#vedio{
-  
-  width: 100%;
-  height:80px;
-  z-index: -10;
-  
- 
-}
+
 header.masthead
 {background:no-repeat center center;background-color:#64696d
     ;margin-top:0px;height:35rem;padding-top:20px;width:100%;backface-visibility: visible;background-size: cover;}
@@ -299,7 +294,7 @@ margin-bottom: 20px;
            
              .container-waterflow{
                 height: 100%;
-                width:5%;
+                width:11%;
                position: fixed;
            z-index:-10;
               background-color:brown;
