--- a/templates/signin.html
+++ b/templates/signin.html
@@ -21,6 +21,9 @@
 
   </head>
  <body>
+    <header class="masthead" id="photu"style="background-image: url('{{ url_for('static', filename='img/signin.webp') }}')" >
+     
+     
   <div class="form-body">
     <div class="row">
         <div class="form-holder">
@@ -63,6 +66,7 @@
         </div>
     </div>
 </div>
+</header>
 
  </body>
 </html>
