--- a/static/css/for_all_web.css
+++ b/static/css/for_all_web.css
@@ -128,7 +128,7 @@ body{
 /* footer */
 .cont-footer{
 position: fixed;
-background:linear-gradient(190deg,#434343,#000000);
+background:linear-gradient(0,#434343,#000000);
 bottom: 0;
 left: 0;
 margin-top: 50px;
@@ -164,10 +164,10 @@ float:right;
 
 }
 .wrapper{
-  background: linear-gradient(109.6deg, rgb(46, 49, 49) 11.2%, rgba(110,123,251,1) 91.1%);
+  background: linear-gradient(110.6deg, rgb(46, 49, 49) 25.9%, rgba(110,123,251,1) 91.1%);
   position: fixed;
   width: 100%;
-  height: clamp(65px,6vw,80px);
+  height: clamp(60px,6vw,80px);
   z-index: 10;
 }
 .wrapper nav{
@@ -191,11 +191,11 @@ nav .content .links{
 }
 .content .logo a{
   color: bisque;
-  font-size: clamp(30px,4vw,40px);
+  font-size: clamp(24px,4vw,40px);
   font-weight:800;
   text-decoration: none;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin-top: 16px;
+  margin-top: clamp(7px,5vw,16px);
 }
 .content .links li{
   list-style: none;
@@ -232,21 +232,21 @@ nav .content .links{
   display: none;
 }
 .wrapper #show-search:checked ~ .search-icon i::before{
-  content: "\f00";
-line-height: 30px;
+  content: "\f00d";
+line-height: 25px;
 }
 
 #icon-s{
-  font-size: clamp(30px,3vw,37px);
- margin-right: 60%;
- margin-top: 22px;
+  font-size: clamp(24px,3vw,37px);
+ margin-right:60%;
+ margin-top: clamp(16px,2vw,22px);
 }
 .wrapper .search-box{
   position: absolute;
-  height: clamp(65%,3vw,98%);
+  height: clamp(62%,3vw,98%);
   max-width: calc(100% - 50px);
   width: 90%;
-  
+
   opacity: 0;
   pointer-events: none;
   transition: all 0.4s ease;
@@ -260,7 +260,7 @@ line-height: 30px;
   height: 100%;
  
   outline: none;
-  font-size: 28px;
+  font-size: clamp(20px,4vw,28px);
   color: #efe1e1;
   font-weight: 700;
   background:rgb(23, 22, 22);
@@ -268,7 +268,9 @@ line-height: 30px;
   border-radius: 20px;
 }
 .search-box input::placeholder{
-  color: #f2f2f2;
+  color:whitesmoke;
+  font-size: clamp(17px,3vw,30px)
+ 
 }
 .search-box .go-icon{
   position: absolute;
@@ -281,7 +283,7 @@ line-height: 30px;
   border: none;
   outline: none;
   color: #fff;
-  font-size: 40px;
+  font-size: clamp(30px,4vw,40px);
   cursor: pointer;
 }
 .wrapper input[type="checkbox"]{
@@ -379,12 +381,16 @@ line-height: 30px;
   display: none;
  }
 
-
+.search-box{
+  margin-top: -1%;
+  height:55%
+}
 
  
 
   .wrapper{
     padding-bottom: 10px;
+ 
   }
   .vriddhi_logo{
     display: inline;
@@ -399,6 +405,7 @@ line-height: 30px;
   }
   .wrapper .menu-icon{
     display: block;
+    margin-top: -1%;
   }
   .wrapper #show-menu:checked ~ .menu-icon i::before{
     content: "\f00d";
@@ -409,18 +416,16 @@ line-height: 30px;
   .go-icon{
     margin-left: 9px;
   }
-  .search-box input{
-    font-size: 22px;
-  }
+
   
   nav .content .links{
     display: block;
     position: fixed;
-    background:  linear-gradient(170.6deg, rgb(46, 49, 49) 11.2%, rgba(110,123,251,1) 91.1%);
+    background:  linear-gradient(110.6deg, rgb(46, 49, 49) 18.9%, rgba(110,123,251,1) 91.1%);
     height: 100%;
 width:clamp(280px,2vw,350px);
   
-  top:51px;
+  top:46px;
     left: -100%;
     margin-left: 0;
     
@@ -444,9 +449,7 @@ width:clamp(280px,2vw,350px);
     padding: 8px 18px;
     cursor: pointer;
   }
-  #menu{
-    font-size: 24px;
-  }
+
  
   .content .links li a.desktop-link{
     display: none;
@@ -476,6 +479,14 @@ width:clamp(280px,2vw,350px);
   }
 }
 @media screen and (max-width:740px){
+  #icon-s{
+    margin-right: 30%;
+  }
+  .search-box{
+    margin-top: -2%;
+  
+    
+  }
   .copyright{
   
     margin-left: 5%;
@@ -500,10 +511,12 @@ width:clamp(280px,2vw,350px);
  
   .wrapper .search-box{
     max-width: calc(100% - 70px);
+    margin-top: -3%;
   }
  
   .wrapper .search-box input{
     padding-right: 20px;
+  
   }
   .copyright{
     margin-top: 2%;
