--- a/templates/new_account.html
+++ b/templates/new_account.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=0.75,maximum-scale=0.75, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+   
 
     <title>Start Your Journey</title>
     
@@ -37,7 +37,7 @@
                     <form method="post" action="/new_account">
 
                         <div class="col-md-12">
-                           <input class="form-control" type="text" name="username" placeholder="UserName (upto 10-characters)" required>
+                           <input class="form-control" type="text" name="username" placeholder="UserName (short)" required>
                            <div class="valid-feedback">Username field is valid!</div>
                            <div class="invalid-feedback">Username field cannot be blank!</div>
                         </div>
