--- a/static/css/for_all_web.css
+++ b/static/css/for_all_web.css
@@ -128,7 +128,7 @@ body{
 /* footer */
 .cont-footer{
 position: fixed;
-background:linear-gradient(0,#434343,#000000);
+background:linear-gradient(#434343,#000000);
 bottom: 0;
 left: 0;
 margin-top: 50px;
@@ -164,11 +164,12 @@ float:right;
 
 }
 .wrapper{
-  background: linear-gradient(110.6deg, rgb(46, 49, 49) 25.9%, rgba(110,123,251,1) 91.1%);
+  background: linear-gradient(110.6deg, rgb(46, 49, 49) 55.9%, rgba(110,123,251,1) 91.1%);
   position: fixed;
   width: 100%;
-  height: clamp(60px,6vw,80px);
+  height: clamp(50px,6vw,80px);
   z-index: 10;
+  
 }
 .wrapper nav{
   position: relative;
@@ -195,7 +196,7 @@ nav .content .links{
   font-weight:800;
   text-decoration: none;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin-top: clamp(7px,5vw,16px);
+  margin-top: clamp(2px,9vw,16px);
 }
 .content .links li{
   list-style: none;
@@ -217,7 +218,7 @@ nav .content .links{
 }
 .content .links li a:hover,
 .content .links li label:hover{
-  background: #282f3c;
+  background: rgb(104, 99, 99)
 }
 .wrapper .search-icon,
 .wrapper .menu-icon{
@@ -239,11 +240,12 @@ line-height: 25px;
 #icon-s{
   font-size: clamp(24px,3vw,37px);
  margin-right:60%;
- margin-top: clamp(16px,2vw,22px);
+ padding-bottom: 40px;
+
 }
 .wrapper .search-box{
   position: absolute;
-  height: clamp(62%,3vw,98%);
+  height: clamp(50%,4vw,80%);
   max-width: calc(100% - 50px);
   width: 90%;
 
@@ -279,11 +281,11 @@ line-height: 25px;
   transform: translateY(-50%);
   line-height: 0px;
   width: 70px;
-  background:rgb(23, 22, 22);
+  background:transparent;
   border: none;
   outline: none;
   color: #fff;
-  font-size: clamp(30px,4vw,40px);
+  font-size: clamp(25px,4vw,40px);
   cursor: pointer;
 }
 .wrapper input[type="checkbox"]{
@@ -355,7 +357,7 @@ line-height: 25px;
   }
   .wrapper nav{
     max-width: 100%;
-    padding: 0 20px;
+    padding: 0 30px;
   }
   nav .content .links{
     margin-left: 30px;
@@ -380,11 +382,10 @@ line-height: 25px;
  #refbut{
   display: none;
  }
-
 .search-box{
   margin-top: -1%;
-  height:55%
 }
+
 
  
 
@@ -409,6 +410,7 @@ line-height: 25px;
   }
   .wrapper #show-menu:checked ~ .menu-icon i::before{
     content: "\f00d";
+   
   }
   .wrapper .search-box{
    width:70%;
@@ -421,14 +423,14 @@ line-height: 25px;
   nav .content .links{
     display: block;
     position: fixed;
-    background:  linear-gradient(110.6deg, rgb(46, 49, 49) 18.9%, rgba(110,123,251,1) 91.1%);
+    background:  linear-gradient(140.6deg, rgb(46, 49, 49) 18.9%, rgba(110,123,251,1) 91.1%);
     height: 100%;
 width:clamp(280px,2vw,350px);
-  
-  top:46px;
+  border:8px white;
+  top:36px;
     left: -100%;
     margin-left: 0;
-    
+  
     overflow-y: auto;
     padding-bottom: 80px;
     transition: all 0.3s ease;
@@ -478,14 +480,30 @@ width:clamp(280px,2vw,350px);
     border-radius: 5px!important;
   }
 }
+@media screen and (max-width:970px){
+  .search-box{
+    margin-top: -2%;
+  }
+  .menu-icon{
+    padding-bottom: 1%;
+  }
+  #icon-s{
+    margin-top: 1vw;
+  }
+}
 @media screen and (max-width:740px){
   #icon-s{
     margin-right: 30%;
+  margin-top: 10px;
+   
   }
   .search-box{
-    margin-top: -2%;
+    margin-top: -4%;
   
     
+  }
+  .menu-icon{
+    padding-bottom: 2%;
   }
   .copyright{
   
@@ -503,15 +521,18 @@ width:clamp(280px,2vw,350px);
     margin-left: 10%;
   }
 }
-@media screen and (max-width: 400px){
+@media screen and (max-width: 450px){
 
   .wrapper nav{
     padding: 0 10px;
   }
- 
+ .menu-icon{
+  padding-bottom: 4%;
+ }
   .wrapper .search-box{
     max-width: calc(100% - 70px);
-    margin-top: -3%;
+    margin-top: -6%;
+   
   }
  
   .wrapper .search-box input{
