--- a/templates/home.html
+++ b/templates/home.html
@@ -14,14 +14,14 @@
    
       <div class="video-container">
           <video autoplay muted loop>
-              <source src="{{ url_for('static', filename='img/') }}" type="video/mp4">
+              <source src="{{ url_for('static', filename='img/vriddhi_vedio.mp4') }}" type="video/mp4">
              
           </video>
       </div>
       </header>
     <body>
       <link href="{{ url_for('static', filename='css/for_home.css') }}" rel="stylesheet">
-      <div class="animation"></div>
+
     
       <div class="container-waterflow">
         <div class="waterflow">
@@ -34,9 +34,7 @@
   
       <br>
       <br>
-      <br>
-      <br>
-      <br>
+  
    
        
         {% for post in posts %}
@@ -47,7 +45,8 @@
         <div id=user-info-1>
           <div id="logo-1">
           
-            <img class="mb" src="{{url_for('static', filename='img/i.png)}}" alt="" width="80" height="80">
+            <img class="mb" src="{{url_for('static', filename='img/i.png')}}" alt="" width="110" height="110">
+            <img class="mb" src="{{url_for('static', filename='img/i.png')}}" alt="" width="80" height="80">
           </div>
           <div id="username-1">
            {{post.user.username}}
@@ -59,7 +58,7 @@
           <div class="post-preview-1">
             <a href="/individual_post/{{post.slug}}"|slugify|>
              
-<br>
+
               <h2 class="post-title-1">{{ post.title }}
 
               </h2>
@@ -70,18 +69,16 @@
               on {{post.date}}</p>
           </div>
           <div class="content-1">
-          {{post.content[0:300]}}...
+          {{post.content[0:100]}}...
           </div>
           <br>
-          <br>
+       
          
           </div> 
           </div>
          
           
-<br>
-<br>
-<br>
+
 {% else %}
 
 
@@ -92,7 +89,7 @@
   <div id=user-info-2>
     <div id="logo-2">
     
-      <img class="mb" src="{{url_for('static', filename='img/i.png')}}" alt="" width="80" height="80">
+      <img class="mb" src="{{url_for('static', filename='img/i.png')}}" alt="" width="110" height="110">
     </div>
     <div id="username-2">
      {{post.user.username}}
@@ -105,7 +102,7 @@
   <div class="post-preview-2">
     <a href="/individual_post/{{post.slug}}"|slugify|>
      
-       <br>
+      
       <h2 class="post-title-2">{{ post.title }}
 
       </h2>
@@ -121,14 +118,13 @@
  
   </div> 
 <br>
-<br>
-</div>
 
 </div>
 
-<br>
-</br>
-<br>
+</div>
+
+
+
  {% endif %}
   {% endfor %}
  
